# Urika

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  current-status.md  inital-description.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  e2e-smoke.yml  workflow.yml
dev/: 2026-04-27-tester-checklist.md  TESTING.md  status.md  testing-plan.md  tutorials-01-project-setup-walkthrough.md
dev/plans/: 2026-03-05-project-structure-design.md  2026-03-06-builtins-design.md  2026-03-06-session-management.md  2026-03-09-cli-wiring-design.md  2026-03-09-knowledge-pipeline.md  2026-03-10-session-report-design.md  2026-03-10-session-report.md  2026-03-10-smoke-test-design.md  2026-03-20-project-builder.md  2026-03-21-cli-rich-output-design.md  2026-03-22-repl-implementation.md  2026-03-23-multi-backend-design.md  2026-03-24-finalizer-design.md  2026-03-25-unified-terminal-interface-design.md  2026-03-26-textual-tui-design.md  2026-03-26-textual-tui-plan.md  2026-03-29-persistent-repl-session-plan.md  2026-03-31-presentations-and-dashboard-design.md  2026-04-04-cli-refactor-plan.md  2026-04-12-repl-async-upgrade.md  2026-04-24-release-polish.md  2026-04-26-dashboard-coverage-flows.md  2026-04-26-dashboard-polish-smoke.md  2026-04-26-dashboard-polish.md  2026-04-26-phase-13-smoke.md  2026-04-26-project-delete-and-trash.md  2026-04-26-project-delete-smoke.md  2026-04-27-feature-priorities.md  2026-04-27-running-ops-and-log-streaming.md  2026-04-27-running-ops-smoke.md  2026-04-27-secrets-handling-proposal.md  2026-04-28-notifications-polish-smoke.md  2026-04-28-notifications-polish.md  2026-04-28-orchestrator-memory-polish.md  2026-04-28-orchestrator-memory-smoke.md  2026-04-28-project-memory-design.md  2026-04-29-secrets-vault-implementation.md  2026-04-30-experiment-comparison-view.md  2026-04-30-github-integration.md  2026-04-30-multi-provider-thin-abstraction.md  (+8 more)
dev/scripts/: .cache-validation-2026-05-10.md  analyze_prompt_trace.py  parse-cache-trace.py  release-to-main.sh  setup-dev.sh  setup-hooks.sh  smoke-recent-cli.sh  smoke-test.sh  smoke-v04-cli.sh  smoke-v04-e2e-all.sh  smoke-v04-e2e-common.sh  smoke-v04-e2e-hybrid.sh  smoke-v04-e2e-open.sh  smoke-v04-e2e-private.sh  smoke-v04-multi.sh  update-header.py  validate-cache-reuse.sh
dev/test-datasets/: download.py
docs/: 01-getting-started.md  02-core-concepts.md  02-interfaces-overview.md  03-core-concepts.md  03-creating-projects.md  04-creating-projects.md  04-prompts-and-context.md  04-running-experiments.md  05-prompts-and-context.md  05-running-experiments.md  05-viewing-results.md  06-advisor-and-instructions.md  06-agent-system.md  06-cli-reference.md  06-running-experiments.md  06-viewing-results.md  07-advisor-and-instructions.md  07-finalizing-projects.md  07-interactive-repl.md  07-models-and-privacy.md  07-viewing-results.md  08-agent-system.md  08-built-in-tools.md  08-finalizing-projects.md  08-viewing-results.md  09-agent-system.md  09-built-in-tools.md  09-finalizing-projects.md  09-knowledge-pipeline.md  10-built-in-tools.md  10-configuration.md  10-knowledge-pipeline.md  11-agent-system.md  11-configuration.md  11-knowledge-pipeline.md  11-models-and-privacy.md  11-project-structure.md  12-built-in-tools.md  12-cli-reference.md  12-configuration.md  (+43 more)
docs/.archive/: option-a-claude-agent-sdk.md  option-b-build-on-pi.md  option-c-custom-runtime.md
docs/dev/: prd-and-implementation-plan.md
docs/plans/: 2026-03-06-agent-infrastructure-design.md  2026-03-06-agent-infrastructure.md  2026-03-06-builtins.md  2026-03-06-evaluation-framework-design.md  2026-03-06-evaluation-framework.md  2026-03-06-method-system-design.md  2026-03-06-method-system.md  2026-03-06-tool-system.md  2026-03-09-agents-orchestrator.md  2026-03-09-cli-wiring.md  2026-03-11-v01-release-design.md  2026-03-20-tool-method-reclassification-design.md  2026-03-20-tool-method-reclassification.md  2026-03-21-criteria-system-design.md  2026-03-21-criteria-system.md  2026-03-21-method-registry-design.md  2026-03-22-presentation-agent-design.md  2026-03-22-repl-design.md  2026-03-25-unified-terminal-interface-plan.md  2026-03-29-persistent-repl-session-design.md  2026-04-05-urika-v2-architecture-design.md  2026-04-10-agent-runtime-abstraction-design.md
docs/tutorials/: 01-project-setup-walkthrough.md
scripts/: release-to-main.sh  setup-dev.sh  setup-hooks.sh
src/urika/: README.md  __init__.py  __main__.py  cli.py  cli_display.py  cli_display_panels.py  cli_helpers.py  repl.py  repl_commands.py  repl_session.py
tests/: conftest.py  test_cli.py  test_cli__helpers.py  test_cli_agents.py  test_cli_completion.py  test_cli_compliance.py  test_cli_config.py  test_cli_helpers.py  test_cli_json.py  test_cli_new_no_saved_mode.py  test_cli_notifications.py  test_cli_project.py  test_cli_remaining.py  test_cli_run_launcher.py  test_cli_sessions.py  test_cli_tui.py  test_cli_utf8_streams.py  test_cross_interface_defaults.py  test_integration.py  test_integration_reproduce.py  test_integration_seed_from_dataset.py  test_orchestrator_sessions.py  test_rpc_methods.py  test_rpc_protocol.py  test_rpc_server.py
tests/test_agents/: test_advisor_agent_role.py  test_audience.py  test_claude_sdk_adapter.py  test_config.py  test_config_global_fallback.py  test_config_hybrid_forced_private.py  test_echo_role.py  test_endpoint_limits.py  test_evaluator_role.py  test_literature_agent_role.py  test_output_hygiene.py  test_permission.py  test_planning_agent_role.py  test_presentation_agent_role.py  test_project_builder_role.py  test_prompt.py  test_prompt_cache_stability.py  test_prompt_parser_contract.py  test_real_data_prompt.py  test_registry.py  test_report_agent_role.py  test_runner.py  test_suggestion_agent_role.py  test_task_agent_role.py  test_tool_builder_role.py
tests/test_cli/: test_base_invoke.py  test_builder_loop.py  test_builder_usage.py  test_display_tty.py  test_format_agent_output.py  test_logs_command.py  (+4 more)
tui/: THIRD-PARTY-LICENSES  package.json
(+580 files in other folders)
