[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urika"
version = "0.1.0"
description = "Multi-agent scientific analysis platform"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "claude-agent-sdk>=0.1",
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pingouin>=0.5",
    "prompt-toolkit>=3.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    # Visualization (small, needed for plots in reports/presentations)
    "matplotlib>=3.7",
    "seaborn>=0.13",
    # Knowledge pipeline (small, needed for PDF ingestion)
    "pypdf>=4.0",
]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "shap>=0.42",
    "imbalanced-learn>=0.11",
]
notifications = [
    "slack-sdk>=3.0",
    "python-telegram-bot>=20.0",
]
dl = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "timm>=0.9",
]
all = [
    "urika[ml]",
    "urika[notifications]",
    "urika[dl]",
]
dev = [
    "urika[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[project.scripts]
urika = "urika.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/urika"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src"]
