[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urika"
version = "0.4.3"
description = "Multi-agent scientific analysis platform"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "claude-agent-sdk>=0.1,<1.0",
    "click>=8.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pingouin>=0.5",
    "prompt-toolkit>=3.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    # Visualization (needed for plots in reports/presentations)
    "matplotlib>=3.7",
    "seaborn>=0.13",
    # ML (gradient boosting, tuning, explainability, imbalance)
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "optuna>=3.0",
    "shap>=0.42",
    "imbalanced-learn>=0.11",
    # Knowledge pipeline (PDF ingestion)
    "pypdf>=4.0",
    # Dashboard (markdown rendering)
    "markdown>=3.5",
    # Notifications (Slack, Telegram)
    "slack-sdk>=3.0",
    "python-telegram-bot>=20.0",
    # TUI (Textual terminal interface — default entry point)
    "textual>=8.0,<9.0",
    "rich>=13.0",
    # Clipboard integration for /copy slash command (terminal-agnostic fallback)
    "pyperclip>=1.8",
    # Dashboard (FastAPI server + templating)
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "jinja2>=3.1",
    # PEP 440-aware version comparison (used by core.updates).
    "packaging>=21.0",
    # Cross-platform PID-alive check for experiment lockfiles. os.kill(pid, 0)
    # raises OSError(WinError 87) on Windows for dead PIDs (not ProcessLookupError),
    # which the lockfile self-heal logic was misclassifying as "lock still valid".
    "psutil>=5.9",
]

[project.optional-dependencies]
dl = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "torchvision>=0.15",
    "torchaudio>=2.0",
    "timm>=0.9",
]
keyring = [
    "keyring>=24.0,<26.0",
]
all = [
    "urika[dl,keyring]",
]
dev = [
    "urika[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "pexpect>=4.8",
    "playwright>=1.40",
]

[project.scripts]
urika = "urika.cli:cli"

[project.urls]
Homepage = "https://github.com/xkiwilabs/Urika"
Repository = "https://github.com/xkiwilabs/Urika"
Documentation = "https://github.com/xkiwilabs/Urika/tree/main/docs"
Issues = "https://github.com/xkiwilabs/Urika/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/urika"]

# Bundle the user-facing docs/ tree inside the wheel so the dashboard's
# Documentation page works on pip-installed Urika (otherwise docs/ only
# ships with editable installs from a source checkout).
[tool.hatch.build.targets.wheel.force-include]
"docs" = "urika/_docs"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# v0.4.2 M15: register markers so future ``-m "not slow"`` invocations
# don't get the "unknown marker" warning. Slow = wall-clock > ~1s
# (subprocess spawn, real SSE polling). Integration = end-to-end
# scenarios that need external resources (the dev/scripts/smoke-*.sh
# E2E harness, promoted as @pytest.mark.integration tests in M16).
markers = [
    "slow: tests that take more than ~1s wall-clock",
    "integration: end-to-end tests requiring external resources",
]

[tool.ruff]
target-version = "py311"
src = ["src"]
